2008-11-24  Stefan Kost  <ensonic@users.sf.net>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	  Add one log message to check for audio_drained. Sync one log message
	  with the condition. Send EOS after draining audio in pull mode.

2008-11-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/gio/gstgiobasesrc.c: (gst_gio_base_src_create):
	* ext/gnomevfs/gstgnomevfssrc.c: (gst_gnome_vfs_src_create):
	Use gst_buffer_try_new_and_alloc() and fail properly if the
	allocation failed. This prevents abort() if downstream elements
	request an insane amount of memory.

2008-11-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/volume/gstvolume.c: (volume_choose_func),
	(volume_update_volume), (gst_volume_set_volume),
	(gst_volume_get_volume), (gst_volume_set_mute),
	(gst_volume_class_init), (gst_volume_init),
	(volume_process_double), (volume_process_float),
	(volume_process_int32), (volume_process_int32_clamp),
	(volume_process_int24), (volume_process_int24_clamp),
	(volume_process_int16), (volume_process_int16_clamp),
	(volume_process_int8), (volume_process_int8_clamp), (volume_setup),
	(volume_transform_ip), (volume_set_property),
	(volume_get_property):
	* gst/volume/gstvolume.h:
	Cleanup volume, define and use default values.
	Recalculate new volume and mute setup before processing. Fixes #561789.

	* tests/check/elements/volume.c: (GST_START_TEST), (volume_suite):
	Add controller unit test. Patch by: Jonathan Matthew
	Fix bogus test that messed with basetransform's internal state.

2008-11-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/videorate/gstvideorate.c:
	Add jpeg and png image media types to the caps. Fixes #561436.

2008-11-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaysink.c: (gen_audio_chain):
	Don't post an error when we can't configure the volume but post a
	warning instead. Fixes #561780.

2008-11-21  David Schleef  <ds@schleef.org>

	Patch by: Jonathan Rosser <jonathan.rosser@rd.bbc.co.uk>
