@@ -1,3 +1,9 @@
+2008-11-24  David Schleef  <ds@schleef.org>
+
+	* ext/ogg/gstoggmux.c:
+	* ext/ogg/gstoggmux.h:
+	  If we're muxing a dirac stream, flush the page after every picture.
+
 2008-11-24  Stefan Kost  <ensonic@users.sf.net>
 
 	* gst-libs/gst/audio/gstbaseaudiosink.c:
